# task-stack

./: README.md  index.html  package.json  pnpm-lock.yaml
src/: App.tsx  api.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: aerospace.rs  db.rs  lib.rs
src/components/: Settings.tsx  TaskRow.tsx
