[package]
name = "task-stack"
version = "0.1.0"
description = "An always-on corner heads-up display for parallel work"
authors = ["Samuel Ratnam"]
edition = "2021"

[lib]
name = "task_stack_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
# Non-activating macOS panel: a tiling WM (AeroSpace) ignores it and summoning
# it never steals focus from the app underneath.
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
